--- a/_1.Presentation/Views/_Partials/ProjectListPartials/_EditProjectModal.cshtml
+++ b/_1.Presentation/Views/_Partials/ProjectListPartials/_EditProjectModal.cshtml
@@ -6,9 +6,9 @@
         <header class="form-header">
             <h1 class="form-title">Edit Project</h1>
             <div class="close-icon-wrapper">
-                <img src="https://cdn.builder.io/api/v1/image/assets/2a274513ffcd4318aca721aa009fe223/fbad265fe11d048cf327a34d15de60a4a8ffd228?placeholderIfAbsent=true"
-                     alt="Close"
-                     class="close-icon" />
+                <button type="button" class="close-icon" aria-label="Close modal">
+                    <i class="ti ti-x"></i>
+                </button>
             </div>
         </header>
 
