--- a/_1.Presentation/Views/Login/Index.cshtml
+++ b/_1.Presentation/Views/Login/Index.cshtml
@@ -191,6 +191,10 @@
             </div>
         </div>
     </section>
+    @await Html.PartialAsync("_CookieConsent")
+
+
+
 </main>
 <script src="...jquery.min.js"></script>
 <script src="...jquery.validate.min.js"></script>
