--- a/_1.Presentation/Views/Shared/_AppLayout.cshtml
+++ b/_1.Presentation/Views/Shared/_AppLayout.cshtml
@@ -51,6 +51,8 @@
     <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css"
           rel="stylesheet" />
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/7.0.5/signalr.min.js" integrity="sha512-CJZhmElKX8zJ1Z8Ipy3SdyT+FJZhMdu7AB3x0xMyGVrKi7M3qZQBGhWlMFCR+vNTVwEcLkE8TyzHi3oAVAbKHw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     @RenderSection("Styles", required: false)
 </head>
 <body>
@@ -114,96 +116,20 @@
                 </div>
                 <div class="user-controls">
                     <!-- Klockikonen -->
-                    <button class="icon-button" id="notificationsToggle">
+                    <button class="icon-button" id="notificationsToggle" style="position: relative;">
                         <i class="ti ti-bell"></i>
+                        <span id="notificationCount"
+                              style="position: absolute; top: -5px; right: -5px; background-color: red; color: white;
+                 font-size: 0.75rem; padding: 2px 6px; border-radius: 50%; display: inline-block;"
+                              hidden>
+                            0
+                        </span>
                     </button>
 
-                    <section class="notification-card" id="notificationsCard" hidden>
-                        <header class="notification-header">
-                            <h2 class="notification-title">Notifications</h2>
-                            <span class="notification-count">1</span>
-                        </header>
-                        <hr class="notification-divider" />
-                        <article class="notification-item">
-                            <div class="app-icon-wrapper">
-                                <svg class="app-icon"
-                                     width="56"
-                                     height="56"
-                                     viewBox="0 0 56 56"
-                                     fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <g clip-path="url(#clip0_7623_10982)">
-                                        <rect width="56" height="56" rx="14" fill="white"></rect>
-                                        <rect width="56"
-                                              height="56"
-                                              rx="14"
-                                              fill="url(#paint0_linear_7623_10982)"
-                                              fill-opacity="0.7"></rect>
-                                        <g filter="url(#filter0_d_7623_10982)">
-                                            <path d="M27.3808 16.5088C27.7652 15.8398 28.7303 15.8396 29.1149 16.5086L41.1493 37.4425C41.5301 38.105 41.0577 38.9323 40.2936 38.9394C38.6448 38.9546 36.6348 38.9699 34.4285 38.9821C34.0694 38.9841 33.7368 38.7932 33.5572 38.4823L24.4213 22.6602C24.2431 22.3515 24.2426 21.9712 24.4202 21.6621L27.3808 16.5088Z"
-                                                  fill="white"></path>
-                                            <path d="M20.1405 29.2468C19.7826 29.2468 19.4519 29.4381 19.2735 29.7484L14.8435 37.455C14.4643 38.1147 14.9312 38.9387 15.692 38.9491C17.5011 38.9736 19.495 38.9891 21.5651 38.9977C21.9276 38.9993 22.2625 38.8042 22.4403 38.4882L26.7999 30.737C27.1748 30.0704 26.6931 29.2468 25.9283 29.2468H20.1405Z"
-                                                  fill="white"></path>
-                                        </g>
-                                    </g>
-                                    <defs>
-                                        <filter id="filter0_d_7623_10982"
-                                                x="10.709"
-                                                y="16.007"
-                                                width="34.5747"
-                                                height="30.9908"
-                                                filterUnits="userSpaceOnUse"
-                                                color-interpolation-filters="sRGB">
-                                            <feFlood flood-opacity="0"
-                                                     result="BackgroundImageFix"></feFlood>
-                                            <feColorMatrix in="SourceAlpha"
-                                                           type="matrix"
-                                                           values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                                                           result="hardAlpha"></feColorMatrix>
-                                            <feOffset dy="4"></feOffset>
-                                            <feGaussianBlur stdDeviation="2"></feGaussianBlur>
-                                            <feComposite in2="hardAlpha"
-                                                         operator="out"></feComposite>
-                                            <feColorMatrix type="matrix"
-                                                           values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.05 0"></feColorMatrix>
-                                            <feBlend mode="normal"
-                                                     in2="BackgroundImageFix"
-                                                     result="effect1_dropShadow_7623_10982"></feBlend>
-                                            <feBlend mode="normal"
-                                                     in="SourceGraphic"
-                                                     in2="effect1_dropShadow_7623_10982"
-                                                     result="shape"></feBlend>
-                                        </filter>
-                                        <linearGradient id="paint0_linear_7623_10982"
-                                                        x1="9.88235"
-                                                        y1="56.4706"
-                                                        x2="46.8042"
-                                                        y2="22.0572"
-                                                        gradientUnits="userSpaceOnUse">
-                                            <stop stop-color="#307CF4"></stop>
-                                            <stop offset="0.302083" stop-color="#863AF7"></stop>
-                                            <stop offset="0.640221" stop-color="#BC37E2"></stop>
-                                            <stop offset="1" stop-color="#EF615C"></stop>
-                                        </linearGradient>
-                                        <clipPath id="clip0_7623_10982">
-                                            <rect width="56"
-                                                  height="56"
-                                                  rx="14"
-                                                  fill="white"></rect>
-                                        </clipPath>
-                                    </defs>
-                                </svg>
-                            </div>
-                            <div class="notification-content">
-                                <p class="notification-message">ASP.NET Web App added</p>
-                                <p class="notification-time">1 min ago</p>
-                            </div>
-                            <button class="notification-close"
-                                    aria-label="Close notification">
-                                <i class="ti ti-x"></i>
-                            </button>
-                        </article>
-                    </section>
+
+
+                    @await Component.InvokeAsync("NotificationCard")
+
 
                     <button class="icon-button">
                         <i class="ti ti-settings" id="settingsToggle"></i>
@@ -228,6 +154,10 @@
                                 </button>
                             </form>
 
+                            <button type="button" class="menu-item settings-item" onclick="showCookieModal()" style="width: 100%;">
+                                <i class="ti ti-cookie"></i>
+                                <span class="menu-text" style="margin-left: 8px;">GDPR / Cookies</span>
+                            </button>
 
                         </nav>
                     </article>
@@ -291,7 +221,14 @@
             </header>
 
             @RenderBody()
-            
+            <!-- Tom behållare för att injicera cookiemodalen -->
+            <div id="cookieConsentModal" class="cookie-modal" hidden>
+                @await Html.PartialAsync("_CookieConsentInApp")
+            </div>
+
+
+
+
         </main>
     </div>
 
@@ -527,6 +464,120 @@
             }, 100); // timeout för att hinna klicka på item
         });
     </script>
-    
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            const cookieButton = document.querySelector('.settings-menu button[onclick="showCookieModal()"]');
+            const modal = document.getElementById("cookieConsentModal");
+
+            if (cookieButton && modal) {
+                cookieButton.addEventListener("click", () => {
+                    modal.removeAttribute("hidden");
+                });
+            }
+        });
+    </script>
+
+    <!-- 🛎️ SignalR - Markera som läst & animera bort + snackbar -->
+    <script>
+        document.addEventListener("click", async (e) => {
+            if (e.target.closest(".notification-close")) {
+                const article = e.target.closest(".notification-item");
+                const id = article.dataset.id;
+                if (!id) return;
+
+                try {
+                    await fetch(`/notifications/mark-read/${id}`, { method: "POST" });
+                } catch (err) {
+                    console.error("Kunde inte markera notifikation som läst:", err);
+                }
+
+                article.classList.add("fade-out");
+                setTimeout(() => article.remove(), 300);
+
+                const countElem = document.getElementById("notificationCount");
+                const current = parseInt(countElem.textContent) || 0;
+                if (current > 0) countElem.textContent = current - 1;
+
+                showSnackbar("Notifikation markerad som läst");
+            }
+        });
+
+        function showSnackbar(message) {
+            const snackbar = document.getElementById("snackbar");
+            snackbar.textContent = message;
+            snackbar.classList.add("show");
+
+            setTimeout(() => {
+                snackbar.classList.remove("show");
+            }, 3000); // visas i 3 sekunder
+        }
+    </script>
+
+
+    <!-- 🛎️ SignalR - Markera som läst & animera bort -->
+    <script>
+        document.addEventListener("click", async (e) => {
+            if (e.target.closest(".notification-close")) {
+                const article = e.target.closest(".notification-item");
+                const id = article.dataset.id;
+                if (!id) return;
+
+                try {
+                    await fetch(`/notifications/mark-read/${id}`, { method: "POST" });
+                } catch (err) {
+                    console.error("Kunde inte markera notifikation som läst:", err);
+                }
+
+                // Lägg till fade-out klass och ta bort efter animation
+                article.classList.add("fade-out");
+                setTimeout(() => article.remove(), 300); // Matchar transition-duration
+
+                const countElem = document.getElementById("notificationCount");
+                const current = parseInt(countElem.textContent) || 0;
+                if (current > 0) countElem.textContent = current - 1;
+            }
+        });
+    </script>
+    <!--Script for Notification count in menu-->
+    <script>
+        const notificationCountEl = document.getElementById("notificationCount");
+        let notificationCount = 0;
+
+        const connection = new signalR.HubConnectionBuilder()
+            .withUrl("/notificationHub")
+            .build();
+
+        connection.on("ReceiveNotification", function (title, message) {
+            notificationCount++;
+            notificationCountEl.textContent = notificationCount;
+            notificationCountEl.hidden = false;
+        });
+
+        connection.start().catch(err => console.error(err.toString()));
+    </script>
+    <!--script för att synka notification counts-->
+    <script>
+        document.addEventListener("DOMContentLoaded", async () => {
+            try {
+                const res = await fetch("/notifications/getunreadcount");
+                const count = await res.json();
+                const el = document.getElementById("notificationCount");
+                if (count > 0) {
+                    el.textContent = count;
+                    el.hidden = false;
+                } else {
+                    el.hidden = true;
+                }
+            } catch (err) {
+                console.error("Kunde inte hämta notifikationscount:", err);
+            }
+        });
+
+    </script>
+
+    <!-- 🧩 Snackbar för bekräftelser -->
+    <div id="snackbar" class="snackbar">Notifikation markerad som läst</div>
+
+
 </body>
 </html>
