--- a/_1.Presentation/Views/_Partials/UserListPartials/_MemberModals.cshtml
+++ b/_1.Presentation/Views/_Partials/UserListPartials/_MemberModals.cshtml
@@ -47,7 +47,7 @@
                     <option value="">Välj en roll</option>
                     <option value="User">User</option>
                     <option value="Customer">Customer</option>
-                    <option value="TeamMember">Team Member</option>
+                    <option value="Teammember">Team Member</option>
                     <option value="Manager">Manager</option>
                 </select>
                 <div class="error-message" id="errorRole"></div>
